--- a/src/main/resources/hi/verkefni/vidmot/css/floskur.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/floskur.css
@@ -7,11 +7,14 @@
 }
 .text-field {
     -fx-border-color: black;
+    -fx-background-color: #AEC6CF;
     -fx-border-width: 1px;
     -fx-padding: 5px;
+    -fx-prompt-text-fill: #4d4d4d;
 }
+
 .button {
-    -fx-background-color: lightgrey;
+    -fx-background-color: #74C476;
     -fx-padding: 5px;
     -fx-border-color: black;
     -fx-border-width: 1px;
@@ -23,7 +26,18 @@
 }
 #fxDosirLabel,
 #fxFloskurLabel,
+#fxSamtalsLabel {
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-padding: 0;
+}
+
+
+#fxDosirLabel,
+#fxFloskurLabel,
 #fxGreida,
+#fxSamtalsLabel,
 #fxHreinsa {
     -fx-font-weight: bold;
 }
