--- a/src/main/resources/hi/verkefni/vidmot/css/darkmode.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/darkmode.css
@@ -65,3 +65,9 @@
     -fx-text-fill: white;
 }
 
+.output-label {
+    -fx-background-color: #AEC6CF !important;
+    -fx-text-fill:#4d4d4d !important;
+    -fx-border-color: black !important;
+}
+
