Bætti við .properties skrám og aðferðum í controllerinn svo nú er hægt að skipta á milli íslensku og ensku í viðmótinu

--- a/src/main/resources/hi/verkefni/vidmot/flosku-view.fxml
+++ b/src/main/resources/hi/verkefni/vidmot/flosku-view.fxml
@@ -22,8 +22,8 @@
             <Region HBox.hgrow="ALWAYS" />
 
             <!-- Right side -->
-            <ToggleButton fx:id="fxEngButton" text="ENG"/>
-            <ToggleButton fx:id="fxIceButton" text="ICE"/>
+            <ToggleButton fx:id="fxIceButton" text="ÍSL" onAction="#switchToIcelandic"/>
+            <ToggleButton fx:id="fxEngButton" text="ENG" onAction="#switchToEnglish"/>
         </HBox>
     </top>
 
