breytti litunum á undo og redo tökkunum

--- a/src/main/resources/hi/verkefni/vidmot/flosku-view.fxml
+++ b/src/main/resources/hi/verkefni/vidmot/flosku-view.fxml
@@ -44,8 +44,8 @@
                 <TextField fx:id="fxFloskur" onAction="#onFloskur" prefWidth="150" promptText="Sláðu inn fjölda" />
                 <Label fx:id="fxFloskurVirdi" styleClass="output-label" prefWidth="50" text="0" />
             </HBox>
-            <Button fx:id="fxUndo" text="Afturkalla" onAction="#undo"/>
-            <Button fx:id="fxRedo" text="Endurgera" onAction="#redo"/>
+            <Button fx:id="fxUndo" text="Afturkalla" onAction="#undo" styleClass="undo-redo-button"/>
+            <Button fx:id="fxRedo" text="Endurgera" onAction="#redo" styleClass="undo-redo-button"/>
 
             <!-- Row for Total -->
             <HBox alignment="CENTER" spacing="10">
