--- a/src/main/resources/hi/verkefni/vidmot/css/floskur.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/floskur.css
@@ -28,6 +28,14 @@
     -fx-padding: 15px;
     -fx-spacing: 10px;
 }
+.undo-redo-button {
+    -fx-background-color: #DBE6FF;
+    -fx-text-fill: black;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
+    -fx-padding: 5px;
+}
+
 #fxDosirLabel,
 #fxFloskurLabel,
 #fxSamtalsLabel {
