--- a/src/main/resources/hi/verkefni/vidmot/css/floskur.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/floskur.css
@@ -24,7 +24,7 @@
     -fx-background-color: #C7E9C0 !important
 }
 .vbox {
-    -fx-background-color: #f4f4f4;
+    -fx-background-color: #CCDBFF;
     -fx-padding: 15px;
     -fx-spacing: 10px;
 }
@@ -34,6 +34,9 @@
     -fx-border-color: black;
     -fx-border-width: 1px;
     -fx-padding: 5px;
+}
+.undo-redo-button:hover {
+    -fx-background-color: #E5EDFF !important; /* Slightly darker blue on hover */
 }
 
 #fxDosirLabel,
