--- a/src/main/resources/hi/verkefni/vidmot/css/floskur.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/floskur.css
@@ -29,7 +29,7 @@
     -fx-spacing: 10px;
 }
 .undo-redo-button {
-    -fx-background-color: #DBE6FF;
+    -fx-background-color: #a1d6f7;
     -fx-text-fill: black;
     -fx-border-color: black;
     -fx-border-width: 1px;
