lagaði ensku útgáguna af outputinu þegar notandi sendir kvittun, gerði outputið einnig hvítt í dark mode

--- a/src/main/resources/hi/verkefni/vidmot/css/darkmode.css
+++ b/src/main/resources/hi/verkefni/vidmot/css/darkmode.css
@@ -38,6 +38,9 @@
     -fx-effect: none !important;
     -fx-opacity: 1 !important;
 }
+.confirmation-label {
+    -fx-text-fill: white;
+}
 
 
 .button:armed, .button:pressed {
